--- a/app/assets/stylesheets/modules/buttons.scss
+++ b/app/assets/stylesheets/modules/buttons.scss
@@ -47,8 +47,8 @@
   align-self: start;
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 960px) {
   .sticky-top {
-    flex-wrap: wrap;
+    flex-direction: column;
   }
 }
